2002-03-12  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* Makefile.am, api.c: New file.  Contains the API wrappings for
	the optimization algorithms.

	* solver.c (solver): Bug fix: added a type coersion.

	* reports.c : moved set_bold and set_underlined into
	src/tools/dao.[ch].

2002-03-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* reports.c : changed names of utility functions now in 
	  src/tools/dao.[hc]

2002-03-11  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c (fill_header_titles): Added also the printing of the
	time.
	(solver_program_report): Print the coefficent only if it is != 1.
	(solver_performance_report): Fixed the CPU model and MHz printing
	at least for Linux.
	(get_cpu_info): Wrote.

	* solver.c (solver): Use G_USEC_PER_SEC instead of a constant.

	* reports.c (solver_limits_report): Changed the row nbr to three
	to make the title visible again.
	
2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-03-10  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c (solver_sensitivity_report): Some improvements.

	* solver.c (is_still_feasible): Wrote.
	(calculate_limits): Wrote.
	(solver): Finished the limits reporting.
	(check_program_definition_failures): Fixed allocation bug.

	* reports.c (solver_program_report): Implemented the program
	report generation.  Gives the LP program in math form.
	(solver_limits_report): Implemented.

	* solver.c: Related changes.
	
2002-03-09  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c (solver_program_report): Renamed as
	solver_performance_report.  Added stubs for solver_program_report
	and solver_dual_program_report.

	* reports.c (solver_answer_report): Fix the final value of
	obj. fn. reporting in the case where the target cell has a
	constant increment.
	(solver_limits_report): Ditto.

	* solver.c (solver_results_free): Plugged a leak.
	(solver): Plugged a leak.
	(check_program_definition_failures): Remove list inverting.