@@ -13,5 +13,6 @@ noinst_LIBRARIES = libsolver.a
 
 libsolver_a_SOURCES =				\
 	api.c					\
+	api.h					\
 	solver.c				\
 	reports.c				
