@@ -5,7 +5,22 @@
  *   Jukka-Pekka Iivonen <jiivonen@hutcs.cs.hut.fi>
  *
  * (C) Copyright 1999, 2000, 2002 by Jukka-Pekka Iivonen
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */
+
 #include <gnumeric-config.h>
 #include "gnumeric.h"
 #include "numbers.h"
@@ -22,6 +37,7 @@
 #include "value.h"
 #include "mathfunc.h"
 #include "analysis-tools.h"
+#include "api.h"
 
 #include <math.h>
 #include <stdlib.h>
@@ -30,8 +46,6 @@
 /* ------------------------------------------------------------------------- */
 
 
-extern SolverLPAlgorithm lp_algorithm[];
-
 SolverParameters *
 solver_param_new (void)
 {
@@ -639,7 +653,7 @@ solver (WorkbookControl *wbc, Sheet *sheet, gchar **errmsg)
 	return res;
 }
 
-
+/* FIXME */
 SolverParameters *
 solver_lp_copy (const SolverParameters *src_param, Sheet *new_sheet)
 {
